# Embedded_Linux

C++/PC_Control/: CMakeLists.txt  Executer.cpp  Executer.hpp  PC_Control.cpp  PC_Control.out  Server.cpp
C++/Session_2/: task1.cpp  task1.out  task2.cpp  task2.out  task3.cpp  task3.out  task4.cpp  task4.out  task5.cpp  task5.out  task6.cpp  task6.out  task7.cpp  task7.out
C++/Session_3/: Task1.cpp  Task1.out  Task2.cpp  Task2.out  Task3.cpp  Task3.out  Task4.cpp  Task4.out  Task5.cpp  Task5.out  Task6.cpp  Task6.out  Task7.cpp  Task7.out  Task8.cpp  Task8.out
C++/Session_4/: Task1.cpp  Task1.out  Task2.cpp  Task2.out  file.txt
C++/Session_5/: Task1.cpp  Task1.out
LInux/Dynamic_Link_Library/Program/: CMakeLists.txt  main.cpp
LInux/Dynamic_Link_Library/shared_lib/: CMakeLists.txt  Server.cpp  Server.hpp
